// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CSidebar customize show 1`] = `
<div>
  <div
    class="sidebar sidebar-narrow sidebar-fixed sidebar-self-hiding-lg sidebar-narrow-unfoldable show bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CSidebar component 1`] = `
<div>
  <div
    class="sidebar"
  >
    Test
  </div>
</div>
`;
